# force_observer

./: CMakeLists.txt  Config.cmake.in  ContactModel.py  ContactModel1d_3d.py  ContactModel6D.py  LICENSE  README.md  contact_mpc.py  contact_mpc.yml  estimator.py  license.txt  mpc_kuka_contact.py  mpc_kuka_sanding.py  mpc_utils.py  ocp_utils.py  package.xml  sanding_mpc.py  sanding_mpc.yml  test_contact.py  test_contact6d.py
config/: contact_mpc.yml  sanding_mpc.yml
demos/: ContactModel.py  ContactModel1d_3d.py  contact_mpc.py  estimator.py  sanding_mpc.py  sanding_mpc.yml  standing_demo.py  standing_utils.py
demos/utils/: mpc_utils.py  ocp_utils.py
doc/: 1.general_rules.md  2.cpp_coding_guidelines.md
include/force_observer/: dam_tau.hpp  estimator.hpp  estimator_tau.hpp  gepadd.hpp  mh_estimator.hpp  mh_varying_estimator.hpp  python.hpp
include/package_template/: default_configuration.hpp
kuka_dgh/: config.yml  config36d.yml  controller.py  controller36d.py  launch_expe.py  launch_expe.py.lprof  paper_plot.py  paper_plot_video1.py  paper_plot_video2.py  paper_plot_video3.py  plot_compare.py  plot_expe.py  plot_lateral_model.py  plot_step_response.py
kuka_dgh/config/: normal_force.yml  polishing.yml
kuka_dgh/controllers/: normal_force.py  polishing.py
kuka_dgh/demos/: launch_expe.py  launch_utils.py
kuka_dgh/plots/: animate_polishing.py  paper_plot_lateral_model.py  paper_plot_step_response.py  paper_plot_video2.py  plot_expe.py  plot_normal_force.py  plot_polishing.py  plot_utils.py
kuka_dgh/utils/: find_contact_point.py
python/: CMakeLists.txt  dam_tau.cpp  estimator.cpp  estimator_tau.cpp  gepadd.cpp  main.cpp  mh_estimator.cpp  mh_varying_estimator.cpp
python/force_observer/: __init__.py  estimator.py  ocp_utils.py
src/: dam_tau.cpp  estimator.cpp  estimator_tau.cpp  gepadd.cpp  main.cpp  mh_estimator.cpp  mh_varying_estimator.cpp
tests/: CMakeLists.txt  add.cpp  boost_add.cpp  iiwa_ft_sensor_shell.urdf  test_contact_dam.py  test_dam_delta_tau.py  test_estimator.cpp  test_estimators.py  test_mh_estimator.cpp  test_mh_varying_estimator.cpp  test_pid_cpp.cpp  test_pid_python.py
tests/python/: CMakeLists.txt  test_add.py  test_contact.py  test_dam_delta_tau.py  test_estimator.py  test_estimators.py
utils/: analysis_utils.py  find_contact_point.py  mpc_utils.py  ocp_utils.py  path_utils.py  reduced_model.py  sim_utils.py
